# crate-operator

./: .dockerignore  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .yamllint  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  README.md  README.rst  index.yaml  pyproject.toml  setup.cfg  setup.py  storage-class.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: add-to-project.yaml  build-and-release-dc_util.yaml  docker_image.yaml  lint.yaml  main.yaml  publish-helm-release.yaml
crate/operator/: __init__.py  backup.py  bootstrap.py  change_backup.py  change_compute.py  change_plan.py  config.py  constants.py  cratedb.py  create.py  edge.py  exceptions.py  expand_volume.py  main.py  (+13 more)
deploy/: crd.yaml  deployment.yaml  rbac.yaml
devops-build/: azure-pipelines.yml  buildAndPushDockerImage.yml  setversion.yml
devtools/: bumpversion.sh  create_tag.sh
docs/: .gitignore  Makefile
tests/: __init__.py  conftest.py  test_backup.py  test_bootstrap.py  test_bootstrap_readiness.py  test_change_compute.py  test_change_plan.py  test_cratedb.py  test_create.py  test_create_grand_central.py  test_decorators.py  test_expand_volume.py  test_exposure.py  test_grand_central_exposure.py  test_kubeapi.py  test_load_balancer_updates.py  test_master_nodes.py  test_metrics.py  test_openshift.py  test_operations.py  test_ping_cratedb_status.py  test_restart_cluster.py  test_restore_backup.py  test_resume.py  test_retry_on_throttle.py  test_scale.py  test_sql.py  test_update_allowed_cidrs.py  test_update_backups_schedule.py  test_update_grand_central.py  test_update_password.py  test_upgrade.py  test_webhooks.py  utils.py
(+91 files in other folders)
